welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    var couleur:Boolean=getCouleurSol()
                                     ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  while (estSurBiscuit()==false){
  ^